<resources>
    <string name="app_name">Popular Movies</string>

    <string name="content_authority">tanmaygodbole.popularmovies</string>

    <string-array name="sort_spinner_choices">
        <item>Popular</item>
        <item>Top Rated</item>
        <item>Favourites</item>
    </string-array>
    <string-array name="sort_spinner_choice_values">
        <item>popular</item>
        <item>top_rated</item>
        <item>favourites</item>
    </string-array>
    <string name="menu_settings_title">Settings</string>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="duration_placeholder">Maybe we\'ll add the duration here</string>
    <string name="title_placeholder">Title comes here</string>
    <string name="date_placeholder">Release date comes here</string>
    <string name="rating_placeholder">Rating comes here</string>
    <string name="synopsis_placeholder">Here comes the movie synopsis</string>
    <string name="movie_poster_image">Movie Poster image</string>

    <string name="image_dir">.popularMovies</string>
    <string name="favourite_button_title">Favourite</string>
    <string name="spinner_title">Choose items to display</string>
    <string name="trailers_label">Trailers</string>
    <string name="reviews_label">Reviews</string>
    <string name="play_button_description">Play button</string>
    <string name="by_10_text">/10</string>

</resources>
