<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailsRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MovieDetailFragment">
    <!--tools:showIn="@layout/activity_movie_detail"-->




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_placeholder"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/test_margin_32" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="@dimen/test_margin_32"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:id="@+id/detailsScroller">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/detailsScrollerHolder">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/poster"
                android:minWidth="93dp"
                android:minHeight="138dp"
                android:maxWidth="250dp"
                android:maxHeight="375dp"
                android:adjustViewBounds="true"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/movie_poster_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_placeholder"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/date"
                android:layout_alignTop="@+id/poster"
                android:layout_toEndOf="@+id/poster"
                android:layout_marginStart="10dp"
                android:textStyle="italic" />

            <!--TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration_placeholder"
                android:id="@+id/duration"
                android:layout_marginTop="30dp"
                android:layout_below="@+id/date"
                android:layout_alignStart="@+id/date" /-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating_placeholder"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/rating"
                android:layout_below="@+id/date"
                android:layout_alignStart="@+id/date"
                android:layout_marginTop="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/synopsis_placeholder"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/synopsis"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_below="@+id/poster"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/trailers_label"
                android:id="@+id/trailers_label"
                android:layout_marginTop="30dp"
                android:layout_below="@+id/synopsis"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/trailers_list"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/trailers_label"
                android:orientation="vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/reviews_label"
                android:id="@+id/reviews_label"
                android:layout_marginTop="30dp"
                android:layout_below="@+id/trailers_list"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reviews_list"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/reviews_label"
                android:orientation="vertical"/>


        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
